# johnny

./: Dockerfile  compose-build.yaml  entrypoint.sh  pyproject.toml
johnny/: __init__.py  celery.py  config.py  extensions.py
johnny/models/: __init__.py  ansible.py  groups.py  user.py
johnny/routes/auth/: __init__.py  forms.py  login.py
johnny/routes/public/: __init__.py  bp.py  getredis.py  index.py  list.py
johnny/tasks/: __init__.py  clry.py  scheduler.py  update_from_redis.py
johnny/templates/: base.j2  list.j2  login.j2
johnny/templates/_snippets/: footer.j2  nav_top_01.j2  nav_top_02.j2
