[tool.poetry]
name = "johnny"
version = "0.1.0"
description = "A look into your Ansible cache"
authors = ["Eelco Wesemann <6771014+sgaduuw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
bunnet = "^1.2.0"
pymongo = "^4.6.1"
environs = "^10.3.0"
redis = "^5.0.1"
gunicorn = "^21.2.0"
celery = "^5.3.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
